namespace/automation/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: automation
  labels:
    app.kubernetes.io/name: homeassistant
    app.kubernetes.io/managed-by: flux
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: homeassistant
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homeassistant
    spec:
      runtimeClassName: youki
      containers:
        - name: homeassistant
        # renovate: datasource=docker depName=lscr.io/linuxserver/homeassistant
          image: lscr.io/linuxserver/homeassistant:latest@sha256:117ee74e0e7da4e932d2dcf0760ed064cd0ca80efe4865cc7c09a59ff9233337
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8123
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: homeassistant-config
