namespace/automation/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: automation
spec:
  selector:
    app: homeassistant
  ports:
    - port: 8123
      targetPort: 8123
      protocol: TCP
      name: homeassistant
  type: ClusterIP
