namespace/automation/home-assistant/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant-https
  namespace: automation
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homeassistant.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
      services:
        - name: homeassistant
          port: 8123
  tls: 
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant-http
  namespace: automation
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`homeassistant.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
        - name: redirect-https
          namespace: traefik
      services:
        - name: homeassistant
          port: 8123
